# trade-safety

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.json
.cursor/rules/: alembic-enum-migrations.mdc  arrow-function.mdc  coding-practices.mdc  comments.mdc  component-architecture.mdc  components.mdc  enum.mdc  error-handling.mdc  frontend-formatting.mdc  frontend.mdc  project-structure.mdc  pull-request.mdc  python-env.mdc  stories.mdc  tests.mdc
.gemini/: config.yaml  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: backend-ci.yml  chromatic.yml  cla.yml  frontend-ci.yml  publish-backend.yml  publish-frontend.yml
backend/: .gitignore  Makefile  README.md  main.py  mypy.ini  pylintrc  pyproject.toml  pyrightconfig.json
backend/aioia_trade_safety/: __init__.py  factories.py  managers.py  service.py
backend/aioia_trade_safety/api/: __init__.py  router.py
backend/aioia_trade_safety/repositories/: __init__.py  trade_safety_repository.py
backend/alembic/: env.py
backend/alembic/versions/: 143655370e43_rename_risk_score_to_safe_score.py  46ef2cade112_initial_migration_create_trade_safety_.py
backend/tests/: __init__.py
backend/tests/integration/: test_trade_safety_analysis.py  test_twitter_api.py
backend/tests/unit/: test_factories.py  test_ml_classifier.py  test_output_language.py  test_preview_service.py  test_reddit_extract_text.py  test_router.py  test_trade_safety_check.py  test_twitter_extract_text.py  test_twitter_metadata.py  test_url_validation.py
backend/trade_safety/: __init__.py  config.py  factories.py  main.py  models.py  preview_service.py  prompts.py  reddit_extract_text_service.py  schemas.py  service.py  settings.py  twitter_extract_text_service.py
backend/trade_safety/_vendor/: __init__.py  config.py  database.py  errors.py
backend/trade_safety/api/: __init__.py  router.py
backend/trade_safety/config/: __init__.py
backend/trade_safety/database/: manager.py  models.py
backend/trade_safety/ml/: __init__.py  classifier.py  ensemble.py  mlp.py
backend/trade_safety/repositories/: __init__.py  trade_safety_repository.py
docs/: integration-guide.md
frontend/: .eslintrc.json  .gitignore  .releaserc.json  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.lib.json  tsconfig.test.json  vite.config.ts
frontend/.storybook/: README.md  main.ts  preview.tsx
frontend/src/: index.ts  types.ts
frontend/src/api/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[lang]/: layout.tsx  page.tsx
frontend/src/components/: HomeHeroSection.tsx  PageHeader.tsx  QuickResultTeaser.tsx  RiskSignalCard.tsx  UrlPreviewCard.tsx  UrlPreviewCardSkeleton.tsx
frontend/src/components/DetailedResult/: AISummarySection.tsx  AnalysisCard.tsx  CautionsSection.tsx  CompanionCtaSection.tsx  ExpertAdviceSection.tsx  PriceAnalysisSection.tsx  RecommendationSection.tsx  RiskScoreHero.tsx  RiskSignalsSection.tsx  SafeIndicatorsSection.tsx  SafetyChecklistSection.tsx  SectionContent.tsx  SignalsSection.tsx  TranslationSection.tsx  index.tsx
frontend/src/constants/: assets.ts
frontend/src/hooks/: useUrlPreview.ts
frontend/src/i18n/: config.cjs  config.ts  index.ts  translations.ts
frontend/src/i18n/locales/en/: tradeSafety.json  translation.json
frontend/src/i18n/locales/es/: tradeSafety.json  translation.json
frontend/src/i18n/locales/id/: tradeSafety.json  translation.json
frontend/src/i18n/locales/ja/: tradeSafety.json  translation.json
frontend/src/i18n/locales/ko/: tradeSafety.json  translation.json
frontend/src/mocks/: TradeSafetyCheck.mock.ts
frontend/src/providers/: I18nProvider.tsx
frontend/src/repositories/: TradeSafetyRepository.ts  index.ts
frontend/src/services/: ApiService.ts
frontend/src/stories/: AISummarySection.stories.tsx  AnalysisCard.stories.tsx  CautionsSection.stories.tsx  CompanionCtaSection.stories.tsx  ExpertAdviceSection.stories.tsx  HomeHeroSection.stories.tsx  Introduction.mdx  PageHeader.stories.tsx  PriceAnalysisSection.stories.tsx  QuickResultTeaser.stories.tsx  RecommendationSection.stories.tsx  RiskScoreHero.stories.tsx  RiskSignalCard.stories.tsx  RiskSignalsSection.stories.tsx  SafeIndicatorsSection.stories.tsx  SafetyChecklistSection.stories.tsx  SectionContent.stories.tsx  SignalsSection.stories.tsx  TranslationSection.stories.tsx  UrlPreviewCard.stories.tsx
frontend/src/stories/design-system/: Colors.mdx  Colors.stories.tsx  Colors.tsx  Guidelines.mdx
frontend/src/styles/: globals.css
frontend/src/utils/: safetyScore.ts  urlPreview.ts
signatures/: .gitkeep
(+6 files in other folders)
