[tool.poetry]
name = "trade-safety"
version = "0.1.0"
description = "AI-powered safety analysis for K-pop merchandise trading"
authors = ["AIoIA, Inc. <devops@aioia.ai>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["kpop", "merchandise", "trade", "safety", "llm", "scam-detection"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aioia-core = {git = "https://github.com/algorima/aioia-core.git", branch = "feat/settings-classes", subdirectory = "python"}
fastapi = "^0.115.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
langchain = ">=0.1,<1"
langchain-core = ">=0.1,<1"
langchain-anthropic = ">=0.1,<1"
langchain-openai = ">=0.1,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = []
